GUI: add proofreading tags and minor fixes/adjustments:
- add proofreading tags
- ensure all dialogs are disposed on quit
- improve contrast in Bookmarks' list
- update URLs
- code cleanup